# chordVst3

./: .gitignore  CMakeLists.txt  youtubedwnld.py
cmake/: cpm.cmake
engine/: requirements.txt
engine/src/: main.py  spectrogram.py
plugin/: CMakeLists.txt
plugin/include/chordtVst3/: PluginEditor.h  PluginProcessor.h  SongTimer.h  WaveTable.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp  SongTimer.cpp  WaveTable.cpp
